--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,32 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+
+
+  <ion-navbar id="nav" #content swipeBackEnabled="false" *ngIf="userProfile">
+    <ion-buttons left>
+      <button ion-button icon-only menuToggle="left">
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-buttons #profile right round menuToggle="right">
+      <button ion-button round>
+        <img class="nav-avatar" round [src]="userProfile.photoURL">
+      </button>
+    </ion-buttons>
+
+    <ion-title>
+      Song Book
+    </ion-title>
+
+
   </ion-navbar>
+
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+
+  <button ion-button block (click)="googleLogin()" *ngIf="!userProfile">
+    GOOGLE LOGIN
+  </button>
+
+  
 </ion-content>
